# tacc_stats

./: .#test  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.in  INSTALL  MANIFEST.in  Makefile  README  README.md  STATS  STRJOIN.h  TODO  a.out  amd64.py  amd64_pmc.c  archive.sh  block.c  build.sh  build_ib  build_rpm  collect.c  collect.h  collect_key_value_file.c  collect_single.c  conf_parser.py  config  config.ib_amd  config.mx_intel  cpu.c  cron-file  dict.c  dict.h  display.py  do-rte_configure.sh  do_configure.sh  do_lonestar-configure.sh  do_stampede-configure.sh  do_tacc-stats-configure.sh  (+116 more)
. # directory of compute hosts raw stats file/: 1398875868
analysis/: CMakeLists.txt  cpi_sweep.py  job_plotter.py  job_sweeper.py  mempercore.py  nightly.py  nightly.sh  nightly.sh.in  uncorrelated.py
analysis/exam/: tests.py
analysis/old/: dump_csv_weijia.py  high_cpi_or_cpe.py  plotkey_paper.py  tspl.py  tspl_utils.py
analysis/plot/: plots.py
analysis/tests/python/: test_plots.py.in
analyze/: CMakeLists.txt
analyze/analysis/: CMakeLists.txt  analysis_conf.py  cpi_sweep.py  (+2 more)
analyze/process_pickles/: .gitignore  CMakeLists.txt  adjust.py  aggregate_jobs.py  analyze.conf  analyze.conf.in  analyze_conf.py  analyze_conf.py.in  catastrophe.py  checklariat.py  codejobs.py  corr.py  dump_csv_key.py  dump_csv_weijia.py  high_cpi_or_cpe.py  htrate.py  idlehost.py  imbalance.py  internal_imbalance.py  job_analysis.py  lariat_utils.py  lowflops.py  masterplot.py  membw.py  mempercore.py  memusage.py  metadata_rate.py  miss_vs_stall.py  my_utils.py  nightly.py  nightly.sh  pcolorkey.py  phase.py  plot.py  plotkey.py  test.sh  tspl.py  tspl_utils.py  ubdemo.ipynb  uncorrelated.py  (+3 more)
analyze/process_pickles/exam/: tests.py
analyze/process_pickles/old/: membw.py
analyze/process_pickles/plot/: plots.py
analyze/process_pickles/tests/: CMakeLists.txt
analyze/process_pickles/tests/python/: test_plots.py.in
autodoc/: Doxyfile.in
cfg/: comet.cfg  discovery.cfg  install.inc  lonestar.cfg  maverick.cfg  post.inc  stampede.cfg  tacc-stats.cfg  wrangler.cfg
debian/: changelog  control  copyright
hpcperfstats/: conf_parser.py  listend.py  rerun_import.sh
monitor/: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.in  NEWS  README  amd64_pmc.py  batch_acct.py  build_mx  check_pci_id.h  config  config.generic  config.ib_intel  config.ranger  config.status  configure  configure.ac  cpu_is_snb.h  dict.c  dict.h  display.py  do_job_pickles.sh  do_job_pickles_cron.sh  do_job_pickles_cron.sh.in  find_jobs_between.py  find_jobs_between.py.in  hpcperfstats.spec  ib.c  ib_ext.c  ib_sw.c  intel_nhm.c  intel_p4.c  intel_pmc3.c  intel_snb.c  intel_snb.py  intel_snb_cbo.c  intel_snb_hau.c  intel_snb_imc.c  (+39 more)
monitor/autom4te.cache/: output.0  requests  traces.0  traces.1
monitor/src/: .gitignore  JOIN.h  Makefile  Makefile.am  Makefile.in  amd64_df.c  amd64_df.h  amd64_pmc.c  amd64_pmc.h  amd64_rapl.c  amqp_listen.c  archive  archive.sh.in  collect.c  cpu.c  cpuid.c  cpuid.h  daemonize.c  daemonize.h  hpcperfstats.service  ib.c  ib_sw.c  ibm_power9.c  intel_4pmc3.c  intel_8pmc3.c  intel_bdw.c  intel_bdw_cbo.c  intel_bdw_hau.c  intel_bdw_imc.c  intel_bdw_pcu.c  intel_bdw_qpi.c  intel_bdw_r2pci.c  intel_hsw.c  intel_hsw_cbo.c  intel_hsw_hau.c  intel_hsw_imc.c  intel_hsw_pcu.c  intel_hsw_qpi.c  intel_hsw_r2pci.c  intel_hsw_uncore.h  (+69 more)
monitor/src/.deps/: tacc_stats-amd64_pmc.Po  tacc_stats-block.Po  tacc_stats-collect.Po  tacc_stats-cpu.Po  tacc_stats-cpuid.Po  tacc_stats-dict.Po  tacc_stats-ib.Po  tacc_stats-ib_ext.Po  tacc_stats-ib_sw.Po  tacc_stats-intel_hsw.Po  tacc_stats-intel_hsw_cbo.Po  tacc_stats-intel_hsw_hau.Po  tacc_stats-intel_hsw_imc.Po  tacc_stats-intel_hsw_pcu.Po  tacc_stats-intel_hsw_qpi.Po  tacc_stats-intel_hsw_r2pci.Po  tacc_stats-intel_ivb.Po  tacc_stats-intel_ivb_cbo.Po  tacc_stats-intel_ivb_hau.Po  tacc_stats-intel_ivb_imc.Po  tacc_stats-intel_ivb_pcu.Po  tacc_stats-intel_ivb_qpi.Po  tacc_stats-intel_ivb_r2pci.Po  tacc_stats-intel_nhm.Po  tacc_stats-intel_rapl.Po  tacc_stats-intel_snb.Po  tacc_stats-intel_snb_cbo.Po  tacc_stats-intel_snb_hau.Po  tacc_stats-intel_snb_imc.Po  tacc_stats-intel_snb_pcu.Po  tacc_stats-intel_snb_qpi.Po  tacc_stats-intel_snb_r2pci.Po  tacc_stats-intel_wtm.Po  tacc_stats-llite.Po  tacc_stats-lnet.Po  tacc_stats-lustre_obd_to_mnt.Po  tacc_stats-main.Po  tacc_stats-mdc.Po  tacc_stats-mem.Po  tacc_stats-net.Po  (+13 more)
monitor/src/log/: 1512058300  1512058378  current
monitor/tests/: CMakeLists.txt
monitor/tests/data/: tacc_jobs_completed
monitor/tests/data/2013/10/01/: hostlist.1835740
monitor/tests/python/: 1835740_ref  job_pickles.py  np2text.py  read.py
pickler/: CMakeLists.txt  MetaData.py  account.py  amd64_pmc.py  archive.sh  batch_acct.py  do_job_pickles.sh  do_job_pickles_cron.sh.in  find_jobs_between.py  getProcdumpData.py  intel_snb.py  job-tmp-setup.sh  job_pickles.py  job_pickles.py.in  job_report.py  job_report.py.in  job_stats.py  mccalpin.py  procdump.py  process.py  reporting-to-times.py  setup.py  summarize.py
pickler/tests/: CMakeLists.txt
pickler/tests/data/: tacc_jobs_completed
pickler/tests/python/: 1835740_ref  np2text.py  pickles.conf
scripts/: Makefile  batchSummary.sh  lonestar.conf  notes.txt  pickle.conf.lonestar  pickle.conf.rush  pickle.conf.stampede  rawTaccStatsTarTransfer.sh  rush.conf  stampede.conf  summary.py  summaryConvertToMongo.py  summary_rush_slurm.py  summary_stampede_slurm.py  supremm.conf  update.sh  update.sh.lonestar  update.sh.rush  update.sh.stampede  validate.sh
services-conf/: django_startup.sh  nginx-nossl.conf  nginx-withssl.conf  rsync_acct.sh  supervisor_startup.sh  supervisord.conf
site/: CMakeLists.txt  ls4_update_db.py  tar.py  update_cron.sh  update_db.py
tacc_stats/: __init__.py  conf_parser.py  daterange.py  listen-stampede2.service  listend  listend.py  listend2.py  rerun_import.sh  site_cfg.py  taccstats  version.py
tacc_stats_web/: secrets_stub.py  settings.py
tacc_statsd.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt  top_level.txt
(+447 files in other folders)
