set(PY_INC_PATH ${CMAKE_SOURCE_DIR}/include)
set(LARIAT_PATH ${lariat_path})
configure_file(analyze_conf.py.in ${CMAKE_CURRENT_SOURCE_DIR}/analyze_conf.py @ONLY)

file(GLOB PY_ANALYZE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.py)

file(COPY ${PY_ANALYZE_FILES} DESTINATION ${CMAKE_SOURCE_DIR}/bin
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

file(COPY lariat_utils.py DESTINATION ${CMAKE_SOURCE_DIR}/include FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
file(COPY analyze_conf.py DESTINATION ${CMAKE_SOURCE_DIR}/include FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

add_subdirectory(tests)
